apply plugin: 'com.android.application'
apply plugin: 'kotlin-android'
apply plugin: 'com.google.gms.google-services'

android {
    compileSdkVersion 30
    buildToolsVersion "30.0.2"

    defaultConfig {
        applicationId "com.example.asasfans"
        minSdkVersion 24
        //noinspection ExpiredTargetSdkVersion
        targetSdkVersion 24
        versionCode 124
        versionName "1.2.4"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"

        javaCompileOptions {
            annotationProcessorOptions {
                includeCompileClasspath true
            }
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
}

dependencies {
    implementation fileTree(dir: "libs", include: ["*.jar"])
    implementation 'androidx.appcompat:appcompat:1.2.0'
    implementation 'com.google.android.material:material:1.2.1'
    implementation "androidx.constraintlayout:constraintlayout:2.1.3"
    // To use constraintlayout in compose
    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0"
    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
    testImplementation 'junit:junit:4.12'
    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'

//    implementation 'com.github.donkingliang:ConsecutiveScroller:4.6.1'

    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"

    implementation 'com.google.firebase:firebase-analytics:20.1.2'

    implementation "androidx.recyclerview:recyclerview:1.2.1"
    // For control over item selection of both touch and mouse driven selection
    implementation "androidx.recyclerview:recyclerview-selection:1.1.0"

    implementation  'com.scwang.smart:refresh-layout-kernel:2.0.1'      //核心必须依赖
    implementation  'com.scwang.smart:refresh-header-classics:2.0.1'    //经典刷新头
//    implementation  'com.scwang.smart:refresh-header-radar:2.0.1'       //雷达刷新头
//    implementation  'com.scwang.smart:refresh-header-falsify:2.0.1'     //虚拟刷新头
    implementation  'com.scwang.smart:refresh-header-material:2.0.1'    //谷歌刷新头
//    implementation  'com.scwang.smart:refresh-header-two-level:2.0.1'   //二级刷新头
//    implementation  'com.scwang.smart:refresh-footer-ball:2.0.1'        //球脉冲加载
    implementation  'com.scwang.smart:refresh-footer-classics:2.0.1'    //经典加载

    implementation(platform("com.squareup.okhttp3:okhttp-bom:4.9.3"))

    // define any required OkHttp artifacts without version
    implementation("com.squareup.okhttp3:okhttp")
    implementation("com.squareup.okhttp3:logging-interceptor")

    implementation 'com.google.code.gson:gson:2.9.0'

    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5' //加载图片开源库
//    implementation ("com.github.bumptech.glide:glide:4.11.0") {
//        exclude group: "com.android.support"
//    }
//    implementation "com.android.support:support-fragment:26.1.0"
    // debugImplementation because LeakCanary should only run in debug builds.
//    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.8.1'
    implementation 'com.orhanobut:dialogplus:1.11@aar'

    implementation 'com.google.android.flexbox:flexbox:3.0.0'

//    implementation('com.fasterxml.jackson.core:jackson-core:2.11.1')
//    implementation('com.fasterxml.jackson.core:jackson-annotations:2.11.1')
//    implementation('com.fasterxml.jackson.core:jackson-databind:2.11.1')

    //更好用的EditText
    implementation('com.github.chaychan:PowerfulViewLibrary:1.2.2')
    //简单的底部栏
//    implementation('com.github.chaychan:BottomBarLayout:2.0.2')
    //更好的spinner
    implementation('com.github.arcadefire:nice-spinner:1.4.4')
    //更好的radiobutton
    implementation('com.github.zaaach:TabRadioButton:1.0.2')
    //ios风日期选择器
    implementation('com.contrarywind:Android-PickerView:4.1.9')
    //悬浮球
//    implementation 'com.alonsol:floatserver:1.0.0'
    //修改了这个悬浮球的源码，本地导入的
    implementation(name:'floatserver-debug', ext:'aar')
//    compile(name:'tbs_sdk_thirdapp_v4.3.0.281_44181_sharewithdownloadwithfile_withoutGame_obfs_20220407_152305', ext:'jar')

    implementation 'com.kyleduo.switchbutton:library:2.1.0'

    implementation 'com.danikula:videocache:2.7.1'

//    implementation 'com.github.JeffMony:VideoDownloader:5.8.0'
//    implementation 'com.github.JeffMony:MediaSDK:2.0.0'
//    implementation 'com.github.JeffMony:JeffVideoCache:1.0.0'
}